--- a/public/index.html
+++ b/public/index.html
@@ -25,23 +25,27 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.temp.com/" />
+    <meta property="og:url" content="https://attila-huszar.netlify.app/" />
     <meta property="og:title" content="Attila Huszár, Full Stack Developer" />
     <meta
       property="og:description"
       content="Full Stack Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <meta property="og:image" content="https://www.temp.com/website.jpg" />
+    <meta
+      property="og:image"
+      content="https://attila-huszar.netlify.app/portfolio.jpg" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.temp.com/" />
+    <!-- <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.twitter.com/" />
     <meta
       property="twitter:title"
       content="Attila Huszár, Full Stack Developer" />
     <meta
       property="twitter:description"
       content="Full Stack Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <meta property="twitter:image" content="https://www.temp.com/website.jpg" />
+    <meta
+      property="twitter:image"
+      content="https://attila-huszar.netlify.app/portfolio.jpg" /> -->
 
     <style>
       img {
