--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      media="screen" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-
     <base href="/" />
     <meta name="description" content="developer portfolio" />
     <meta
@@ -56,6 +50,9 @@
         user-select: none;
       }
     </style>
+    <script
+      src="https://kit.fontawesome.com/a737aabc88.js"
+      crossorigin="anonymous"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
