--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
       }
     </style>
     <script
+      async
+      defer
       src="https://kit.fontawesome.com/a737aabc88.js"
       crossorigin="anonymous"></script>
   </head>
