Add blurHash canvas experiment

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <base href="/" />
+    <title>Attila Huszár, Full Stack Developer</title>
+    <meta
+      name="keyword"
+      content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer" />
+    <meta
+      name="description"
+      content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://attila-huszar.netlify.app/" />
+    <meta property="og:title" content="Attila Huszár, Full Stack Developer" />
+    <meta
+      property="og:description"
+      content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
+    <meta
+      property="og:image"
+      content="https://attila-huszar.netlify.app/portfolio.jpg" />
+    <!-- Twitter -->
+    <!-- <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.twitter.com/" />
+    <meta
+      property="twitter:title"
+      content="Attila Huszár, Full Stack Developer" />
+    <meta
+      property="twitter:description"
+      content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
+    <meta
+      property="twitter:image"
+      content="https://attila-huszar.netlify.app/portfolio.jpg" /> -->
+    <script
+      async
+      defer
+      src="https://kit.fontawesome.com/a737aabc88.js"
+      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -13,74 +50,6 @@
       gtag("js", new Date());
       gtag("config", "G-CWSLFLSFP4");
     </script>
-    <!-- Google Tag Manager -->
-    <script>
-      (function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-        var f = d.getElementsByTagName(s)[0],
-          j = d.createElement(s),
-          dl = l != "dataLayer" ? "&l=" + l : "";
-        j.async = true;
-        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
-        f.parentNode.insertBefore(j, f);
-      })(window, document, "script", "dataLayer", "GTM-TMBXJRW");
-    </script>
-    <!-- End Google Tag Manager -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <base href="/" />
-    <meta name="description" content="developer portfolio" />
-    <meta
-      name="keyword"
-      content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer" />
-
-    <!-- Social Media Previews -->
-    <!-- Primary Meta Tags -->
-    <title>Attila Huszár, Full Stack Developer</title>
-    <meta name="title" content="Attila Huszár, Full Stack Developer" />
-    <meta
-      name="description"
-      content="Full Stack Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://attila-huszar.netlify.app/" />
-    <meta property="og:title" content="Attila Huszár, Full Stack Developer" />
-    <meta
-      property="og:description"
-      content="Full Stack Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <meta
-      property="og:image"
-      content="https://attila-huszar.netlify.app/portfolio.jpg" />
-
-    <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.twitter.com/" />
-    <meta
-      property="twitter:title"
-      content="Attila Huszár, Full Stack Developer" />
-    <meta
-      property="twitter:description"
-      content="Full Stack Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <meta
-      property="twitter:image"
-      content="https://attila-huszar.netlify.app/portfolio.jpg" /> -->
-
-    <style>
-      img {
-        -moz-user-select: none;
-        -khtml-user-select: none;
-        -webkit-user-select: none;
-        -o-user-select: none;
-        user-select: none;
-      }
-    </style>
-    <script
-      async
-      defer
-      src="https://kit.fontawesome.com/a737aabc88.js"
-      crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
