--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,9 @@
     <meta
       property="twitter:image"
       content="https://attila-huszar.netlify.app/portfolio.jpg" /> -->
+    <script>
+      console.dir = () => {};
+    </script>
     <script
       async
       defer
