--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
     <meta
       name="description"
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://attila-huszar.netlify.app/" />
     <meta property="og:title" content="Attila Huszár, Full Stack Developer" />
@@ -20,31 +19,12 @@
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta
       property="og:image"
-      content="https://attila-huszar.netlify.app/portfolio.jpg" />
-    <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://www.twitter.com/" />
-    <meta
-      property="twitter:title"
-      content="Attila Huszár, Full Stack Developer" />
-    <meta
-      property="twitter:description"
-      content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
-    <meta
-      property="twitter:image"
-      content="https://attila-huszar.netlify.app/portfolio.jpg" /> -->
+      content="https://cinkes.s3.eu-north-1.amazonaws.com/portfolio/portfolio.jpg" />
     <script>
       console.dir = () => {};
     </script>
-    <script
-      async
-      defer
-      src="https://kit.fontawesome.com/a737aabc88.js"
-      crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-CWSLFLSFP4"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CWSLFLSFP4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -63,18 +43,8 @@
         width="0"
         style="display: none; visibility: hidden"></iframe
     ></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!--Ⓗⓘⓡⓔ ⓜⓔ-->
   </body>
 </html>
