--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,24 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="/" />
-    <title>Attila Huszár, Full Stack Developer</title>
+    <title>Attila Huszár · Web Dev</title>
     <meta
       name="keyword"
-      content="portfolio, javascript, developer, frontend, react, dev, front-end, tech, programmer" />
+      content="javascript, typescript, react, node js, sql, full stack, developer, web dev, web design, frontend, programmer" />
     <meta
       name="description"
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://attila-huszar.netlify.app/" />
-    <meta property="og:title" content="Attila Huszár, Full Stack Developer" />
+    <meta property="og:title" content="Attila Huszár · Web Dev" />
     <meta
       property="og:description"
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta
       property="og:image"
       content="https://cinkes.s3.eu-north-1.amazonaws.com/portfolio/portfolio.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="48x48" type="image/png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" sizes="any" type="image/svg+xml" />
     <script>
       console.dir = () => {};
     </script>
