Migrate from create-react-app to Vite

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <base href="/" />
-    <title>Attila Huszár · Web Dev</title>
+    <title>Attila Huszár | Web Dev</title>
     <meta
       name="keyword"
       content="javascript, typescript, react, node js, sql, full stack, developer, web dev, web design, frontend, programmer" />
@@ -13,15 +13,15 @@
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://attila-huszar.netlify.app/" />
-    <meta property="og:title" content="Attila Huszár · Web Dev" />
+    <meta property="og:title" content="Attila Huszár | Web Dev" />
     <meta
       property="og:description"
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta
       property="og:image"
       content="https://cinkes.s3.eu-north-1.amazonaws.com/portfolio/portfolio.jpg" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" sizes="48x48" type="image/png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
+    <link rel="icon" href="/favicon.ico" sizes="48x48" type="image/png" />
     <script>
       console.dir = () => {};
     </script>
@@ -47,6 +47,6 @@
     ></noscript>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--Ⓗⓘⓡⓔ ⓜⓔ-->
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
