Upd AWS s3 links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
       content="Developer based in Budapest, passionate about building web applications, learning new technologies, traveling and exploring new places." />
     <meta
       property="og:image"
-      content="https://cinkes.s3.eu-north-1.amazonaws.com/portfolio/portfolio.jpg" />
+      content="https://s3.eu-central-1.amazonaws.com/attila.huszar/portfolio/portfolio.jpg" />
     <link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml" />
     <link rel="icon" href="/favicon.ico" sizes="48x48" type="image/png" />
-    <script>
-      console.dir = () => {};
-    </script>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CWSLFLSFP4"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CWSLFLSFP4"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -35,16 +33,11 @@
       gtag("js", new Date());
       gtag("config", "G-CWSLFLSFP4");
     </script>
+    <script>
+      console.dir = () => {};
+    </script>
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript
-      ><iframe
-        src="https://www.googletagmanager.com/ns.html?id=GTM-TMBXJRW"
-        height="0"
-        width="0"
-        style="display: none; visibility: hidden"></iframe
-    ></noscript>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
