--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-CWSLFLSFP4"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
+      window.dataLayer = window.dataLayer || []
       function gtag() {
-        dataLayer.push(arguments);
+        dataLayer.push(arguments)
       }
-      gtag("js", new Date());
-      gtag("config", "G-CWSLFLSFP4");
+      gtag('js', new Date())
+      gtag('config', 'G-CWSLFLSFP4')
     </script>
     <script>
-      console.dir = () => {};
+      console.dir = () => {}
     </script>
   </head>
   <body>
